# rust-mosaic-maker

./: Cargo.toml  README.md  cli.rs  main.rs  minecraftify.rs
src/: block.rs  dithering.rs  main.rs  minecraftify.rs  mosaic.rs  utils.rs
src/algorithms/: dithering.rs  histogram.rs  kmeans.rs  mod.rs
