[package]
name = "mosaic-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
image = "0.24.5"
kmeans_colors = { version = "0.5.0", features = ["palette_color"] }
palette = "0.6.1"
